[project]
name = "rl-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gymnasium[classic-control,mujoco]>=1.3.0",
    "matplotlib>=3.11.1",
    "opencv-python>=5.0.0.93",
    "pygame>=2.6.1",
    "stable-baselines3>=2.9.0",
]
